<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lists</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button1">List (simple)</string>
    <string name="button2">List (images + text)</string>
    <string name="button3">Sending data to another page</string>
    <string name="sendingdata_name">Enter text below</string>
    <string name="buttonDone">Done</string>
    <string name="image_description">image</string>
    <string name="button4">SImple graphics</string>
    <string name="button5">Image button</string>
    <string name="simplebutton">simple button</string>
    <string name="pressbutton">press a button....</string>
    <string name="button6">Alert dialogs</string>
    <string name="closebutton">Close application?</string>
    <string name="waitingbutton">waiting..</string>
    <string name="progressbutton">Progress bar (50%)</string>
    <string name="customdialog">Custom dialog</string>
    <string name="sometexthere">Some text here</string>
    <string name="button7">Tween animation</string>
    <string name="reducingsizebuton">Reducing the size</string>
    <string name="rotatingbutton">Rotating 360 degrees</string>
    <string name="textappearhere">Text will appear here</string>
    <string name="button8">Status messages</string>
    <string name="button9">Sound button</string>
    <string name="button10">SQLight database</string>

</resources>
