<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/nature1"
	    android:orientation="vertical" >
	
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="170dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="5dp"
	        android:text="@string/button1" />
	
	    <Button
	        android:id="@+id/button2"
	        android:layout_width="170dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/button2" />
	
	    <Button
	        android:id="@+id/button3"
	        android:layout_width="170dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/button3" />
	    
	    <Button
	        android:id="@+id/button4"
	        android:layout_width="170dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/button4" />
	
	    <Button
	        android:id="@+id/button5"
	        android:layout_width="170dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/button5" />
	    
	    <Button
	        android:id="@+id/button6"
	        android:layout_width="170dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/button6" />
	
	    <Button
	        android:id="@+id/button7"
	        android:layout_width="170dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/button7" /> 
	        
	    <Button
	        android:id="@+id/button8"
	        android:layout_width="170dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/button8" /> 
	        
	    <Button
	        android:id="@+id/button9"
	        android:layout_width="170dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/button9" /> 
	        
	    <Button
	        android:id="@+id/button10"
	        android:layout_width="170dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/button10" /> 
	        
	    <Button
	        android:id="@+id/button11"
	        android:layout_width="170dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/button7" /> 
	        
	   <Button
	        android:id="@+id/button12"
	        android:layout_width="170dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/button7" /> 
	    
	</LinearLayout>
</ScrollView>
